Adding lib-temperature
Fixes #27
